# geometrical-visual-editor-qt

./: README.md
prj.lab/rational/: rational.cpp
prj.test/: CMakeLists.txt
rid_e_r/: CMakeLists.txt  main.cpp
rid_e_r/prj.cw/: Doxyfile
rid_e_r/prj.cw/paint/: CMakeLists.txt  canvas.cpp  figure.cpp  figure_file_manager.cpp  paint_app.cpp  palette_button.cpp
rid_e_r/prj.cw/paint/include/paint/: canvas.hpp  figure.hpp  figure_file_manager.hpp  mode_enum.hpp  paint_app.hpp  palette_button.hpp
rid_e_r/prj.lab/arrayd/: CMakeLists.txt
rid_e_r/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
rid_e_r/prj.lab/matrixs/: CMakeLists.txt
rid_e_r/prj.lab/orto/: orto.20230519
rid_e_r/prj.lab/rational/include/: rational.hpp
rid_e_r/prj.test/: CMakeLists.txt  arrayt_test.cpp  matrixs_test.cpp  paint_test.cpp
rid_e_r/rational_library/: CMakeLists.txt  rational_lib.cpp  rational_lib.hpp
rid_e_r/tests/: CMakeLists.txt  doctest.cpp  doctest.h
